<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_view_column1"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="@dimen/statistics_activity_text_size"
        android:textColor="@color/blackText"
        android:paddingLeft="@dimen/statistics_list_view_padding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/list_view_column2"
        android:textSize="@dimen/statistics_activity_text_size"
        android:textColor="@color/blackText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/list_view_column3"
        android:textSize="@dimen/statistics_activity_text_size"
        android:textColor="@color/blackText"/>
</LinearLayout>