<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenBackground"
    tools:context="a15008377.opsc7311_assign1_15008377.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/home_activity_text_size"
                android:text="@string/app_name_upper_case"
                android:textColor="@color/blackText"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/button_vertical_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_email_address"
                android:text="@string/label_username"
                android:textSize="@dimen/home_activity_text_size"
                android:textColor="@color/blackText"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_email_address"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/home_activity_text_size"
                android:background="@color/white"
                android:layout_margin="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_password"
                android:text="@string/label_password"
                android:textSize="@dimen/home_activity_text_size"
                android:textColor="@color/blackText"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_password"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/home_activity_text_size"
                android:background="@color/white"
                android:layout_margin="@dimen/activity_horizontal_margin" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_login"
                android:textSize="@dimen/home_activity_text_size"
                android:textColor="@color/blackText"
                android:layout_marginTop="@dimen/button_vertical_margin"
                android:layout_marginLeft="@dimen/button_horizontal_margin"
                android:layout_marginRight="@dimen/button_horizontal_margin"
                android:onClick="loginOnClick"
                android:background="@drawable/view_style" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_create_account"
                android:text="@string/button_create_account"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/label_create_account_text_size"
                android:onClick="createAccountOnClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_forgot_password"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/label_create_account_text_size"
                android:onClick="forgotPasswordOnClick" />
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_height="@dimen/progress_bar_diameter"
        android:layout_width="@dimen/progress_bar_diameter"
        android:indeterminate="true"
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"/>
</RelativeLayout>
