<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/greenBackground"
    tools:context="a15008377.opsc7311_assign1_15008377.CreateAccountActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/home_activity_text_size"
                android:text="@string/button_create_account"
                android:textColor="@color/blackText"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/button_vertical_margin"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_email_address"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/home_activity_text_size"
                android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
                android:layout_marginRight="@dimen/edit_text_horizontal_margin"
                android:inputType="textEmailAddress"
                android:hint="@string/label_email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_username"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/home_activity_text_size"
                android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
                android:layout_marginRight="@dimen/edit_text_horizontal_margin"
                android:inputType="text"
                android:hint="@string/label_username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_password"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/home_activity_text_size"
                android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
                android:layout_marginRight="@dimen/edit_text_horizontal_margin"
                android:inputType="textPassword"
                android:hint="@string/label_password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_confirm_password"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/home_activity_text_size"
                android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
                android:layout_marginRight="@dimen/edit_text_horizontal_margin"
                android:inputType="textPassword"
                android:hint="@string/label_confirm_password"/>
            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_create_account"
                android:textSize="@dimen/home_activity_text_size"
                android:textColor="@color/blackText"
                android:layout_marginLeft="@dimen/button_horizontal_margin"
                android:layout_marginRight="@dimen/button_horizontal_margin"
                android:onClick="createAccountOnClick"
                android:background="@drawable/view_style"
                android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_create_account"
        android:layout_height="@dimen/progress_bar_diameter"
        android:layout_width="@dimen/progress_bar_diameter"
        android:indeterminate="true"
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"/>
</RelativeLayout>