<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenBackground"
    tools:context="a15008377.opsc7311_assign1_15008377.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/home_activity_text_size"
                android:text="@string/app_name_upper_case"
                android:textColor="@color/blackText"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/home_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/home_title"
                android:src="@drawable/home_background" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:id="@+id/button_play"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play_button"
                    android:textSize="@dimen/home_activity_text_size"
                    android:textColor="@color/blackText"
                    android:layout_marginLeft="@dimen/button_horizontal_margin"
                    android:layout_marginRight="@dimen/button_horizontal_margin"
                    android:onClick="startGame"
                    android:background="@drawable/view_style"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:id="@+id/button_how_to_play"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_play_button"
                    android:textSize="@dimen/home_activity_text_size"
                    android:textColor="@color/blackText"
                    android:layout_marginLeft="@dimen/button_horizontal_margin"
                    android:layout_marginRight="@dimen/button_horizontal_margin"
                    android:background="@drawable/view_style"
                    android:onClick="startHowToPlay"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:id="@+id/button_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_button"
                    android:textSize="@dimen/home_activity_text_size"
                    android:textColor="@color/blackText"
                    android:layout_marginLeft="@dimen/button_horizontal_margin"
                    android:layout_marginRight="@dimen/button_horizontal_margin"
                    android:onClick="startStatistics"
                    android:background="@drawable/view_style"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:id="@+id/button_sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_sign_out"
                    android:textSize="@dimen/home_activity_text_size"
                    android:textColor="@color/blackText"
                    android:layout_marginLeft="@dimen/button_horizontal_margin"
                    android:layout_marginRight="@dimen/button_horizontal_margin"
                    android:onClick="signOutOnClick"
                    android:background="@drawable/view_style"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
